--- a/style.css
+++ b/style.css
@@ -142,6 +142,10 @@ body{
     margin: 2rem;
 
 }
+.meal-details-content p{
+    padding: 1rem 0;
+
+}
 .meal-details-content p:not(.recipe-category){
     padding: 1rem 0;
 }
@@ -181,7 +185,8 @@ body{
 
 }
 .recipe-meal-img img{
-    padding: 1rem 0;
+    width: 100px;
+    /* padding: 1rem 0; */
     height: 100px;
     border-radius: 30%;
     margin: 0 auto;
@@ -208,6 +213,15 @@ body{
     background: #fff;
     border-radius: 2rem;
 }
+
+.notFound{
+grid-template-columns: 1fr!important;
+color: orangered;
+font-size: 1.8rem;
+font-weight: 600;
+width: 100%;
+}
+
 
 @media screen and (min-width: 600px){
     .meal-search-box{
